# proc-comm-lib-ows

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
demo/: libtest-test  runner
includes/eoepca/owl/: eoepcaows.hpp  owsparameter.hpp
lib/: eoepcaows.cpp  parser.cpp
lib/includes/: macro.hpp  parser.hpp
lib/includes/yaml/: object.hpp
scripts/: build.sh
src/: run.cpp
tests/: CMakeLists.txt
tests/application/: global.hpp  test01.cpp  test01_check.cpp  test02_run.cpp
tests/application/assets/: cwl.yaml  ows1.xml  ows2.xml  pack.xml  test_entites_ref.yaml  test_entites_ref_2.yaml
tests/cases/: case1.xml
travis/: build.sh
travis/libs/: build.sh
